origin/main Add HTML file and update title in counter.html

--- a/src/counter.html
+++ b/src/counter.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Click Counter App</title>
 </head>
 
 <body>
 
-    <footer>copyright @ pvicky4759gmail.com
+    <footer>Bitrusmail@gmail.com
         <br> All rights reserved.
     </footer>
 </body>
